conditionally build GTK interface. start moving logic out of cli main.c

--- a/man/passphrase-identity.1
+++ b/man/passphrase-identity.1
@@ -1,6 +1,6 @@
 .TH ID "1" "February 2016" "GNU coreutils 8.25" "User Commands"
 .SH NAME
-passphrase-identity \- Regenerable ed25519 keys for OpenSSH
+passphrase-identity \- Regenerable ed25519 keys for OpenSSH and OpenPGP
 .SH SYNOPSIS
 .B passphrase-identity
 [\fI\,options\/\fR]... [\fI\,output directory\/\fR]
